feat: Refactor IT section and add testimonials
Updates the IT section to focus on "Intelligent Automation Systems" and "Automate your customer journey and sell intelligently." This change enhances clarity and better reflects the service offering.

Additionally, testimonial components have been integrated into the Materials and Property pages. This aims to leverage social proof and build credibility by showcasing client successes within those specific service areas.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -9,7 +9,7 @@
     "hero.subtitle": "خبراء عالميون في توريد الأخشاب، والاستشارات العقارية، وحلول تكنولوجيا المعلومات",
     "hero.materials.subtitle": "توريد أجود أنواع الأخشاب ومواد البناء من جميع أنحاء العالم لاحتياجاتك المعمارية.",
     "hero.property.subtitle": "اتخاذ قرارات عقارية ذكية مع تحليل السوق القائم على البيانات والاستشارات المتخصصة.",
-    "hero.it.subtitle": "تمكين عملك باستخدام الجيل القادم من الذكاء الاصطناعي والاستراتيجيات الرقمية.",
+    "hero.it.subtitle": "أنظمة أتمتة ذكية لزيادة نجاح إعلاناتك بمقدار 10 أضعاف.",
     "hero.motto": "تجارة بلا حدود",
     "hero.scroll": "اكتشف المزيد",
     "about.title": "عن مجموعة بزرگی",
@@ -28,8 +28,59 @@
     "departments.property.desc": "مشورة استراتيجية للاستثمار العقاري، والإدارة، والبيع، والشراء، والتأجير.",
     "departments.it.title": "حلول تكنولوجيا المعلومات والذكاء الاصطناعي",
     "departments.it.desc": "خدمات الذكاء الاصطناعي والأتمتة والتسويق الرقمي المتطورة لتمكين الشركات.",
-    "it.title": "تكنولوجيا المعلومات والذكاء الاصطناعي والتحول الرقمي",
-    "it.subtitle": "الاستفادة من قوة الذكاء الاصطناعي والأتمتة لدفع نمو الأعمال.",
+    "it.title": "نظام الأتمتة الذكي",
+    "it.subtitle": "أتمتة رحلة عميلك وقم بالبيع بذكاء.",
+    "it.hero.badge": "بداية مجانية متاحة",
+    "it.hero.cta": "مشاهدة المنتجات",
+    "it.features.noTech": "لا حاجة لمعرفة تقنية",
+    "it.features.support": "دعم 24/7",
+    "it.features.roi": "ضمان عائد الاستثمار",
+    "it.stats.success": "نجاح الإعلان",
+    "it.stats.sales": "زيادة المبيعات",
+    "it.stats.efficiency": "كفاءة النظام",
+    "it.stats.uptime": "أتمتة كاملة",
+    "it.why.title": "لماذا تختار نظامنا؟",
+    "it.why.subtitle": "حل شامل لزيادة الكفاءة والنمو المستدام.",
+    "it.why.speed.title": "سرعة عالية",
+    "it.why.speed.desc": "أتمتة كاملة للعمليات، توفر 75٪ من الوقت وتزيد من سرعة الاستجابة للعملاء.",
+    "it.why.security.title": "أمان كامل",
+    "it.why.security.desc": "حماية البيانات بأعلى معايير الأمان، والتشفير المتقدم، والنسخ الاحتياطي المستمر.",
+    "it.why.growth.title": "نمو قابل للقياس",
+    "it.why.growth.desc": "تقارير دقيقة وتحليلات بيانات لاتخاذ قرارات أفضل ونمو مستمر.",
+    "it.products.title": "المنتجات والخدمات",
+    "it.products.subtitle": "حلول أتمتة شاملة لكل مرحلة من مراحل رحلة العميل.",
+    "it.prod.acquisition.title": "أتمتة الاستحواذ",
+    "it.prod.acquisition.desc": "جذب عملاء مستهدفين تلقائيًا بحملات ذكية وزيادة معدل التحويل حتى 5 أضعاف.",
+    "it.prod.sales.title": "أتمتة المبيعات",
+    "it.prod.sales.desc": "إدارة كاملة لمسار المبيعات، والمتابعة التلقائية، وزيادة المبيعات 3 أضعاف دون موظفين إضافيين.",
+    "it.prod.support.title": "أتمتة ما بعد البيع",
+    "it.prod.support.desc": "دعم ذكي وتتبع تلقائي لرضا العملاء لزيادة الولاء.",
+    "it.prod.ads.title": "أتمتة عمليات الإعلان",
+    "it.prod.ads.desc": "إدارة وتحسين الحملات تلقائيًا لزيادة عائد الاستثمار الإعلاني بمقدار 10 أضعاف.",
+    "it.prod.crm.title": "إدارة علاقات العملاء والولاء",
+    "it.prod.crm.desc": "تواصل مستمر وشخصي مع العملاء لزيادة الاحتفاظ وتكرار الشراء.",
+    "it.prod.scenario.title": "سيناريوهات المبيعات",
+    "it.prod.scenario.desc": "تصميم وتنفيذ سيناريوهات المبيعات تلقائيًا للحصول على أقصى معدلات تحويل.",
+    "it.prod.strategy.badge": "خاص للشركات",
+    "it.prod.strategy.title": "استراتيجية الإعلان",
+    "it.prod.strategy.desc": "تصميم وتنفيذ وتحسين استراتيجيات الإعلان بالذكاء الاصطناعي للحصول على أفضل النتائج. يشمل تحليل السوق.",
+    "it.process.title": "كيف يعمل؟",
+    "it.process.subtitle": "فقط 3 خطوات لإكمال أتمتة عملك.",
+    "it.process.step1.title": "استشارة مجانية",
+    "it.process.step1.desc": "يقوم فريقنا بمراجعة احتياجات عملك واقتراح الحل الأفضل.",
+    "it.process.step2.title": "إعداد سريع",
+    "it.process.step2.desc": "نظام الأتمتة الخاص بك جاهز ويعمل في أقل من 48 ساعة.",
+    "it.process.step3.title": "نمو مستمر",
+    "it.process.step3.desc": "شاهد النتائج من اليوم الأول وحقق نموًا مستدامًا مع التحسين المستمر.",
+    "it.form.title": "جاهز لنمو 10 أضعاف؟",
+    "it.form.subtitle": "احصل على استشارة مجانية الآن وابدأ رحلة التحول الرقمي.",
+    "it.form.name": "الاسم الكامل",
+    "it.form.phone": "رقم الهاتف",
+    "it.form.email": "البريد الإلكتروني",
+    "it.form.product": "اختر المنتج",
+    "it.form.message": "رسالتك (اختياري)",
+    "it.form.submit": "احصل على استشارة مجانية",
+    "it.form.disclaimer": "بإرسال هذا النموذج، فإنك توافق على الشروط والأحكام الخاصة بنا.",
     "it.ai.title": "الذكاء الاصطناعي والأتمتة",
     "it.ai.desc": "نقوم بتنفيذ وكلاء أذكياء وأتمتة سير العمل لتبسيط عملياتك وزيادة الكفاءة.",
     "it.automation.title": "التحول الرقمي",
@@ -75,43 +126,4 @@
     "humanity.hospitalText": "ندعم بفخر مركز زراعة الأعضاء في مستشفى أبو علي سينا، مساهمين في مهمتهم الحاسمة لإنقاذ الأرواح.",
     "humanity.hospitalLink": "زيارة موقع المستشفى",
     "humanity.schoolTitle": "مدرسة محمد علي بزرگی الثانوية",
-    "humanity.schoolText": "تأسست في عام 1996 في شيراز من قبل مجموعة بزرگی، وتعتبر هذه المدرسة الثانوية شهادة على التزامنا بالتعليم وتمكين الجيل القادم.",
-    "contact.title": "اتصل بنا",
-    "contact.subtitle": "هل أنت مستعد لتحسين سلسلة التوريد الخاصة بك؟ تواصل مع فريقنا العالمي اليوم.",
-    "footer.rights": "كل الحقوق محفوظة.",
-    "footer.locationTitle": "موقعنا",
-    "footer.followUs": "تابعنا",
-    "chatbox.title": "الدردشة معنا",
-    "chatbox.placeholder": "اكتب رسالة...",
-    "chatbox.initialMessage": "مرحباً! كيف يمكنني مساعدتك اليوم بخصوص مجموعة بزرگی؟",
-    "chatbox.cannedResponse": "شكرا لرسالتك. سيتواصل معك أحد ممثلينا قريبًا.",
-    "chatbox.typing": "يكتب...",
-    "chatbox.send": "إرسال رسالة",
-    "chatbox.close": "إغلاق الدردشة",
-    "theme.title": "المظهر",
-    "theme.light": "فاتح",
-    "theme.dark": "داكن",
-    "theme.auto": "تلقائي",
-    "whyus.title": "لماذا تختار مجموعة بزرگی — خبراء استشارات الأخشاب",
-    "whyus.subtitle": "في عالم الأخشاب، الخبرة هي الأهم — وقد قمنا ببناء خبرتنا من خلال سنوات من العمل الحقيقي والعملي في الأسواق العالمية.",
-    "whyus.desc1": "مجموعة بزرگی هي شركة متخصصة في استشارات وتوريد الأخشاب، تقدم خبرة عميقة في الأخشاب والمواد القائمة على الخشب — من التوريد والاستيراد إلى اختيار المواد المناسبة للمشاريع الصناعية والمعمارية.",
-    "whyus.desc2": "تستند خدماتنا الاستشارية إلى واقع السوق والخبرة الميدانية المثبتة — وليس النظرية.",
-    "whyus.listTitle": "نحن نساعدك في:",
-    "whyus.list1": "اختيار نوع الخشب المناسب بناءً على احتياجاتك وميزانيتك وهدفك.",
-    "whyus.list2": "تجنب الأخطاء المكلفة في الشراء أو تنفيذ المشروع.",
-    "whyus.list3": "الوصول إلى موردين عالميين موثوقين ومواد خام عالية الجودة.",
-    "whyus.list4": "اتخاذ قرارات فنية وتجارية واثقة بتوجيه مهني.",
-    "whyus.conclusion": "بفضل خبرتنا الطويلة في إسبانيا والشرق الأوسط وأوروبا، نجلب رؤية واسعة وشبكة قوية لكل مشروع. في مجموعة بزرگی، لسنا مجرد موردين — نحن مستشارو الأخشاب الموثوق بهم وشركاؤك الاستراتيجيون في كل خطوة من خطوات اتخاذ القرار.",
-    "property.title": "الاستشارات العقارية",
-    "property.subtitle": "نقدم لك الاستشارة لتعرف بالضبط متى وأين وكيف تستثمر في العقارات.",
-    "property.when.title": "متى",
-    "property.when.desc": "تحليل خبير لدورات السوق لتحديد توقيت الشراء أو البيع أو الإيجار بشكل مثالي.",
-    "property.where.title": "أين",
-    "property.where.desc": "تحديد أفضل المواقع ذات الإمكانات العالية للنمو وعائد الاستثمار.",
-    "property.what.title": "شراء، بيع أو إيجار",
-    "property.what.desc": "نصيحة استراتيجية حول ما إذا كنت تريد شراء أو بيع أو استئجار العقارات بناءً على أهدافك.",
-    "property.who.title": "مع من",
-    "property.who.desc": "ربطك بشركاء ووكلاء وأصحاب مصلحة موثوقين يمكنك الاعتماد عليهم.",
-    "property.strategy.title": "نهجنا الاستراتيجي",
-    "property.strategy.desc": "نحن لا نجد العقارات فحسب؛ نحن نحلل الأسواق. يتيح لنا فهمنا العميق للوائح المحلية في الشرق الأوسط وأوروبا إرشادك خلال المعاملات المعقدة بسهولة، مما يضمن أن استثمارك آمن ومربح."
-}
+    "humanity.schoolText": "تأسست في عام 1996 في شيراز من قبل مجموعة بزرگی، وتعتبر هذه المدرسة الثانوية شهادة على التزامنا بالتعليم وتمكين
