--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,7 +9,7 @@
     "hero.subtitle": "Global Experts in Wood Sourcing, Property Consulting & IT Solutions",
     "hero.materials.subtitle": "Sourcing the finest wood and building materials from around the globe for your architectural needs.",
     "hero.property.subtitle": "Making intelligent real estate decisions with data-driven market analysis and expert consulting.",
-    "hero.it.subtitle": "Empowering your business with next-generation Artificial Intelligence and Digital Strategies.",
+    "hero.it.subtitle": "Intelligent Automation Systems to 10x Your Advertising Success.",
     "hero.motto": "Business Without Boundaries",
     "hero.scroll": "Discover More",
     "about.title": "About Bozorgi Group",
@@ -28,8 +28,59 @@
     "departments.property.desc": "Strategic advice for real estate investment, management, buying, selling, and renting.",
     "departments.it.title": "IT & AI Solutions",
     "departments.it.desc": "Cutting-edge AI, automation, and digital marketing services to empower businesses.",
-    "it.title": "IT, AI & Digital Transformation",
-    "it.subtitle": "Leveraging the power of Artificial Intelligence and Automation to drive business growth.",
+    "it.title": "Intelligent Automation System",
+    "it.subtitle": "Automate your customer journey and sell intelligently.",
+    "it.hero.badge": "Free Start Available",
+    "it.hero.cta": "View Products",
+    "it.features.noTech": "No technical knowledge needed",
+    "it.features.support": "24/7 Support",
+    "it.features.roi": "ROI Guarantee",
+    "it.stats.success": "Ad Success",
+    "it.stats.sales": "Sales Increase",
+    "it.stats.efficiency": "System Efficiency",
+    "it.stats.uptime": "Full Automation",
+    "it.why.title": "Why Choose Our System?",
+    "it.why.subtitle": "A comprehensive solution for increasing efficiency and sustainable growth.",
+    "it.why.speed.title": "High Speed",
+    "it.why.speed.desc": "Complete process automation, saving 75% of time and increasing customer response speed.",
+    "it.why.security.title": "Complete Security",
+    "it.why.security.desc": "Data protection with the highest security standards, advanced encryption, and continuous backups.",
+    "it.why.growth.title": "Measurable Growth",
+    "it.why.growth.desc": "Detailed reports and data analytics for better decision-making and continuous growth.",
+    "it.products.title": "Products & Services",
+    "it.products.subtitle": "Comprehensive automation solutions for every stage of the customer journey.",
+    "it.prod.acquisition.title": "Customer Acquisition",
+    "it.prod.acquisition.desc": "Attract targeted customers automatically with smart campaigns and increase conversion rates by up to 5x.",
+    "it.prod.sales.title": "Sales Automation",
+    "it.prod.sales.desc": "Complete sales funnel management, auto-follow-up, and 3x sales increase without extra staff.",
+    "it.prod.support.title": "After-Sales Automation",
+    "it.prod.support.desc": "Smart support and automatic customer satisfaction tracking to boost loyalty.",
+    "it.prod.ads.title": "Ad Process Automation",
+    "it.prod.ads.desc": "Manage and optimize campaigns automatically to increase ad ROI by 10x.",
+    "it.prod.crm.title": "CRM & Loyalty",
+    "it.prod.crm.desc": "Continuous, personalized communication with customers to increase retention and repeat purchases.",
+    "it.prod.scenario.title": "Sales Scenarios",
+    "it.prod.scenario.desc": "Design and auto-execute sales scenarios for maximum conversion rates.",
+    "it.prod.strategy.badge": "Business Special",
+    "it.prod.strategy.title": "Ad Strategy Automation",
+    "it.prod.strategy.desc": "Design, execute, and optimize ad strategies with AI for best results. Includes market analysis and budget optimization.",
+    "it.process.title": "How It Works?",
+    "it.process.subtitle": "Only 3 steps to complete business automation.",
+    "it.process.step1.title": "Free Consultation",
+    "it.process.step1.desc": "Our team reviews your business needs and suggests the best solution.",
+    "it.process.step2.title": "Rapid Setup",
+    "it.process.step2.desc": "Your automation system is ready and launched in less than 48 hours.",
+    "it.process.step3.title": "Continuous Growth",
+    "it.process.step3.desc": "See results from day one and achieve sustainable growth with ongoing optimization.",
+    "it.form.title": "Ready for 10x Growth?",
+    "it.form.subtitle": "Get a free consultation now and start your digital transformation journey.",
+    "it.form.name": "Full Name",
+    "it.form.phone": "Phone Number",
+    "it.form.email": "Email Address",
+    "it.form.product": "Select Product",
+    "it.form.message": "Your Message (Optional)",
+    "it.form.submit": "Get Free Consultation",
+    "it.form.disclaimer": "By submitting this form, you agree to our terms and conditions.",
     "it.ai.title": "AI & Automation",
     "it.ai.desc": "We implement intelligent agents and workflow automation to streamline your operations and increase efficiency.",
     "it.automation.title": "Digital Transformation",
@@ -51,7 +102,7 @@
     "products.hpl.name": "HPL",
     "products.hpl.description": "Durable High-Pressure Laminates designed for resilient, scratch-resistant surfaces and modern architectural finishes.",
     "products.veneer.name": "Natural Veneer",
-    "products.veneer.description": "Exquisite natural wood slices that add a premium, authentic wood finish to interiors, doors, and cabinetry.",
+    "products.veneer.description": "Exquisitas láminas de madera natural que añaden un acabado de madera auténtico y premium a interiores, puertas y gabinetes.",
     "history.title": "Our Legacy: A Family Tree",
     "history.subtitle": "A journey through generations of leadership and innovation in the timber and building materials industry.",
     "family.gen5.name": "Bozorg Bozorgi",
@@ -113,5 +164,37 @@
     "property.who.title": "Who",
     "property.who.desc": "Connecting you with trusted partners, agents, and stakeholders you can rely on.",
     "property.strategy.title": "Our Strategic Approach",
-    "property.strategy.desc": "We don't just find properties; we analyze markets. Our deep understanding of local regulations in the Middle East and Europe allows us to guide you through complex transactions with ease, ensuring your investment is secure and profitable."
+    "property.strategy.desc": "We don't just find properties; we analyze markets. Our deep understanding of local regulations in the Middle East and Europe allows us to guide you through complex transactions with ease, ensuring your investment is secure and profitable.",
+    "materials.consulting.title": "Consulting Methodology",
+    "materials.consulting.subtitle": "A comprehensive four-step framework to ensure your project's success.",
+    "materials.what.title": "What to Choose",
+    "materials.what.desc": "We identify the exact wood species, grade, and specifications that perfectly match your project's technical and aesthetic requirements.",
+    "materials.when.title": "When to Buy",
+    "materials.when.desc": "We navigate global market fluctuations to help you time your purchases for optimal pricing and on-time delivery.",
+    "materials.where.title": "Where to Source",
+    "materials.where.desc": "Leveraging our network in Europe, America, and Asia, we select the best origin for your materials to balance quality and logistics.",
+    "materials.how.title": "How to Use",
+    "materials.how.desc": "Technical guidance on application, treatment, and maintenance to ensure maximum durability and performance.",
+    "testimonials.title": "Client Success Stories",
+    "testimonials.materials.subtitle": "Trusted by construction leaders and architects worldwide.",
+    "testimonials.materials.quote1": "Bozorgi Group's expertise in wood sourcing saved us significant time and budget on our latest hotel project. The quality was impeccable.",
+    "testimonials.materials.role1": "Senior Architect, Valencia Design Studio",
+    "testimonials.materials.quote2": "Their consulting on when to buy bulk materials helped us avoid the 2023 price surge. True strategic partners.",
+    "testimonials.materials.role2": "Procurement Manager, BuildTech Construction",
+    "testimonials.materials.quote3": "Reliable, transparent, and incredibly knowledgeable about global timber markets.",
+    "testimonials.materials.role3": "Director, Al-Waha Furniture Manufacturing",
+    "testimonials.property.subtitle": "Guiding investors to profitable real estate opportunities.",
+    "testimonials.property.quote1": "Their market analysis for our Dubai investment was spot on. We achieved a 12% ROI in the first year alone.",
+    "testimonials.property.role1": "Private Investor, Italy",
+    "testimonials.property.quote2": "Navigating the legal landscape in a new country is hard. Bozorgi Group made it effortless for our family relocation.",
+    "testimonials.property.role2": "Expat Resident, UK",
+    "testimonials.property.quote3": "Professional advice on commercial leasing that aligned perfectly with our business expansion goals.",
+    "testimonials.property.role3": "CEO, TechStart Ventures",
+    "testimonials.it.subtitle": "What successful businesses say about our automation.",
+    "testimonials.it.quote1": "By using this system, our sales tripled and customer follow-up time was reduced to a quarter. Truly amazing!",
+    "testimonials.it.role1": "Reza Mohammadi, Online Store CEO",
+    "testimonials.it.quote2": "The Ad Automation allowed us to manage our budget better and our conversion rate went up 10x. Highly recommended!",
+    "testimonials.it.role2": "Sarah Ahmadi, Marketing Manager",
+    "testimonials.it.quote3": "They have an amazing support team. The system is very user-friendly and needs no technical knowledge. Excellent!",
+    "testimonials.it.role3": "Mahdi Karimi, Startup Owner"
 }
