--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -9,7 +9,7 @@
     "hero.subtitle": "Expertos Globales en Abastecimiento de Madera, Consultoría Inmobiliaria y Soluciones IT",
     "hero.materials.subtitle": "Abastecimiento de la mejor madera y materiales de construcción de todo el mundo para sus necesidades arquitectónicas.",
     "hero.property.subtitle": "Tomando decisiones inmobiliarias inteligentes con análisis de mercado basado en datos y consultoría experta.",
-    "hero.it.subtitle": "Empoderando su negocio con Inteligencia Artificial y Estrategias Digitales de próxima generación.",
+    "hero.it.subtitle": "Sistemas de Automatización Inteligente para multiplicar por 10 el éxito de su publicidad.",
     "hero.motto": "Negocios Sin Fronteras",
     "hero.scroll": "Descubra Más",
     "about.title": "Sobre Bozorgi Group",
@@ -28,8 +28,59 @@
     "departments.property.desc": "Asesoramiento estratégico para inversión inmobiliaria, gestión, compra, venta y alquiler.",
     "departments.it.title": "Soluciones IT y IA",
     "departments.it.desc": "Servicios de vanguardia en IA, automatización y marketing digital para potenciar las empresas.",
-    "it.title": "IT, IA y Transformación Digital",
-    "it.subtitle": "Aprovechando el poder de la Inteligencia Artificial y la Automatización para impulsar el crecimiento empresarial.",
+    "it.title": "Sistema de Automatización Inteligente",
+    "it.subtitle": "Automatice el viaje de su cliente y venda de forma inteligente.",
+    "it.hero.badge": "Inicio Gratuito Disponible",
+    "it.hero.cta": "Ver Productos",
+    "it.features.noTech": "Sin conocimientos técnicos",
+    "it.features.support": "Soporte 24/7",
+    "it.features.roi": "Garantía de ROI",
+    "it.stats.success": "Éxito Publicitario",
+    "it.stats.sales": "Aumento de Ventas",
+    "it.stats.efficiency": "Eficiencia del Sistema",
+    "it.stats.uptime": "Automatización Total",
+    "it.why.title": "¿Por qué elegir nuestro sistema?",
+    "it.why.subtitle": "Una solución integral para aumentar la eficiencia y el crecimiento sostenible.",
+    "it.why.speed.title": "Alta Velocidad",
+    "it.why.speed.desc": "Automatización completa de procesos, ahorrando un 75% de tiempo y aumentando la velocidad de respuesta al cliente.",
+    "it.why.security.title": "Seguridad Total",
+    "it.why.security.desc": "Protección de datos con los más altos estándares de seguridad, cifrado avanzado y copias de seguridad continuas.",
+    "it.why.growth.title": "Crecimiento Medible",
+    "it.why.growth.desc": "Informes detallados y análisis de datos para una mejor toma de decisiones y un crecimiento continuo.",
+    "it.products.title": "Productos y Servicios",
+    "it.products.subtitle": "Soluciones de automatización integrales para cada etapa del viaje del cliente.",
+    "it.prod.acquisition.title": "Automatización de Captación",
+    "it.prod.acquisition.desc": "Atraiga clientes potenciales automáticamente con campañas inteligentes y aumente la tasa de conversión hasta 5 veces.",
+    "it.prod.sales.title": "Automatización de Ventas",
+    "it.prod.sales.desc": "Gestión completa del embudo de ventas, seguimiento automático y aumento de 3 veces en ventas sin personal adicional.",
+    "it.prod.support.title": "Automatización Post-Venta",
+    "it.prod.support.desc": "Soporte inteligente y seguimiento automático de la satisfacción del cliente para impulsar la lealtad.",
+    "it.prod.ads.title": "Automatización de Publicidad",
+    "it.prod.ads.desc": "Gestione y optimice campañas automáticamente para aumentar el ROI publicitario en 10 veces.",
+    "it.prod.crm.title": "CRM y Lealtad",
+    "it.prod.crm.desc": "Comunicación continua y personalizada con los clientes para aumentar la retención y la repetición de compras.",
+    "it.prod.scenario.title": "Escenarios de Ventas",
+    "it.prod.scenario.desc": "Diseñe y ejecute automáticamente escenarios de ventas para obtener las máximas tasas de conversión.",
+    "it.prod.strategy.badge": "Especial para Empresas",
+    "it.prod.strategy.title": "Estrategia Publicitaria",
+    "it.prod.strategy.desc": "Diseñe, ejecute y optimice estrategias publicitarias con IA para obtener los mejores resultados. Incluye análisis de mercado.",
+    "it.process.title": "¿Cómo funciona?",
+    "it.process.subtitle": "Solo 3 pasos para completar la automatización de su negocio.",
+    "it.process.step1.title": "Consulta Gratuita",
+    "it.process.step1.desc": "Nuestro equipo revisa las necesidades de su negocio y sugiere la mejor solución.",
+    "it.process.step2.title": "Configuración Rápida",
+    "it.process.step2.desc": "Su sistema de automatización está listo y lanzado en menos de 48 horas.",
+    "it.process.step3.title": "Crecimiento Continuo",
+    "it.process.step3.desc": "Vea resultados desde el primer día y logre un crecimiento sostenible con optimización continua.",
+    "it.form.title": "¿Listo para un crecimiento x10?",
+    "it.form.subtitle": "Obtenga una consulta gratuita ahora e inicie su viaje de transformación digital.",
+    "it.form.name": "Nombre Completo",
+    "it.form.phone": "Número de Teléfono",
+    "it.form.email": "Correo Electrónico",
+    "it.form.product": "Seleccionar Producto",
+    "it.form.message": "Su Mensaje (Opcional)",
+    "it.form.submit": "Obtener Consulta Gratuita",
+    "it.form.disclaimer": "Al enviar este formulario, acepta nuestros términos y condiciones.",
     "it.ai.title": "IA y Automatización",
     "it.ai.desc": "Implementamos agentes inteligentes y automatización de flujos de trabajo para agilizar sus operaciones y aumentar la eficiencia.",
     "it.automation.title": "Transformación Digital",
@@ -113,5 +164,37 @@
     "property.who.title": "Quién",
     "property.who.desc": "Conectándolo con socios, agentes y partes interesadas de confianza en los que puede confiar.",
     "property.strategy.title": "Nuestro Enfoque Estratégico",
-    "property.strategy.desc": "No solo encontramos propiedades; analizamos mercados. Nuestra profunda comprensión de las regulaciones locales en Oriente Medio y Europa nos permite guiarlo a través de transacciones complejas con facilidad, asegurando que su inversión sea segura y rentable."
+    "property.strategy.desc": "No solo encontramos propiedades; analizamos mercados. Nuestra profunda comprensión de las regulaciones locales en Oriente Medio y Europa nos permite guiarlo a través de transacciones complejas con facilidad, asegurando que su inversión sea segura y rentable.",
+    "materials.consulting.title": "Metodología de Consultoría",
+    "materials.consulting.subtitle": "Un marco integral de cuatro pasos para asegurar el éxito de su proyecto.",
+    "materials.what.title": "Qué Elegir",
+    "materials.what.desc": "Identificamos la especie de madera exacta, el grado y las especificaciones que coinciden perfectamente con los requisitos técnicos y estéticos de su proyecto.",
+    "materials.when.title": "Cuándo Comprar",
+    "materials.when.desc": "Navegamos por las fluctuaciones del mercado global para ayudarle a programar sus compras para obtener precios óptimos y entrega a tiempo.",
+    "materials.where.title": "Dónde Abastecerse",
+    "materials.where.desc": "Aprovechando nuestra red en Europa, América y Asia, seleccionamos el mejor origen para sus materiales para equilibrar calidad y logística.",
+    "materials.how.title": "Cómo Utilizar",
+    "materials.how.desc": "Guía técnica sobre aplicación, tratamiento y mantenimiento para garantizar la máxima durabilidad y rendimiento.",
+    "testimonials.title": "Historias de Éxito",
+    "testimonials.materials.subtitle": "Con la confianza de líderes de la construcción y arquitectos de todo el mundo.",
+    "testimonials.materials.quote1": "La experiencia de Bozorgi Group en el abastecimiento de madera nos ahorró mucho tiempo y presupuesto en nuestro último proyecto hotelero.",
+    "testimonials.materials.role1": "Arquitecto Senior, Valencia Design Studio",
+    "testimonials.materials.quote2": "Su consultoría sobre cuándo comprar materiales a granel nos ayudó a evitar el aumento de precios de 2023. Verdaderos socios estratégicos.",
+    "testimonials.materials.role2": "Gerente de Compras, BuildTech Construction",
+    "testimonials.materials.quote3": "Fiable, transparente e increíblemente conocedor de los mercados mundiales de madera.",
+    "testimonials.materials.role3": "Director, Al-Waha Furniture Manufacturing",
+    "testimonials.property.subtitle": "Guiando a los inversores hacia oportunidades inmobiliarias rentables.",
+    "testimonials.property.quote1": "Su análisis de mercado para nuestra inversión en Dubai fue acertado. Logramos un ROI del 12% solo en el primer año.",
+    "testimonials.property.role1": "Inversor Privado, Italia",
+    "testimonials.property.quote2": "Navegar por el panorama legal en un nuevo país es difícil. Bozorgi Group hizo que fuera fácil para nuestra reubicación familiar.",
+    "testimonials.property.role2": "Residente Expat, Reino Unido",
+    "testimonials.property.quote3": "Asesoramiento profesional sobre arrendamiento comercial que se alineó perfectamente con nuestros objetivos de expansión empresarial.",
+    "testimonials.property.role3": "CEO, TechStart Ventures",
+    "testimonials.it.subtitle": "Lo que dicen los negocios exitosos sobre nuestra automatización.",
+    "testimonials.it.quote1": "Al usar este sistema, nuestras ventas se triplicaron y el tiempo de seguimiento de clientes se redujo a una cuarta parte. ¡Verdaderamente increíble!",
+    "testimonials.it.role1": "Reza Mohammadi, CEO de Tienda Online",
+    "testimonials.it.quote2": "La automatización de anuncios nos permitió administrar mejor nuestro presupuesto y nuestra tasa de conversión aumentó 10 veces. ¡Muy recomendado!",
+    "testimonials.it.role2": "Sarah Ahmadi, Gerente de Marketing",
+    "testimonials.it.quote3": "Tienen un equipo de soporte increíble. El sistema es muy fácil de usar y no necesita conocimientos técnicos. ¡Excelente!",
+    "testimonials.it.role3": "Mahdi Karimi, Propietario de Startup"
 }
