feat: Enhance SEO and navigation persistence
Adds comprehensive meta tags to index.html for improved search engine visibility and social media sharing. Introduces URL parameter-based page navigation and handles browser back/forward events to maintain navigation state across sessions. Updates locale files with new SEO descriptions for different sections.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,4 +1,12 @@
 {
+    "seo.home.title": "الصفحة الرئيسية",
+    "seo.home.desc": "مجموعة بزرگی هي تكتل متخصص في مواد البناء، والاستشارات العقارية، وحلول تكنولوجيا المعلومات. وصول عالمي، خبرة محلية.",
+    "seo.materials.title": "مواد البناء",
+    "seo.materials.desc": "توريد خبير لـ MDF و HDF والخشب الرقائقي والخشب الصلب. نقدم الاستشارات حول الاختيار والتوقيت والخدمات اللوجستية لمشاريع البناء العالمية.",
+    "seo.property.title": "الاستشارات العقارية",
+    "seo.property.desc": "استشارات عقارية استراتيجية للشراء أو البيع أو التأجير في الشرق الأوسط وأوروبا. حقق أقصى عائد على الاستثمار مع توجيهات الخبراء.",
+    "seo.it.title": "حلول تكنولوجيا المعلومات والذكاء الاصطناعي",
+    "seo.it.desc": "قم بأتمتة عملك باستخدام التسويق المعتمد على الذكاء الاصطناعي، ومسارات المبيعات، وأنظمة CRM. زد الكفاءة والإيرادات بمقدار 10 أضعاف.",
     "header.about": "معلومات عنا",
     "header.products": "مواد البناء",
     "header.property": "العقارات",
@@ -126,4 +134,75 @@
     "humanity.hospitalText": "ندعم بفخر مركز زراعة الأعضاء في مستشفى أبو علي سينا، مساهمين في مهمتهم الحاسمة لإنقاذ الأرواح.",
     "humanity.hospitalLink": "زيارة موقع المستشفى",
     "humanity.schoolTitle": "مدرسة محمد علي بزرگی الثانوية",
-    "humanity.schoolText": "تأسست في عام 1996 في شيراز من قبل مجموعة بزرگی، وتعتبر هذه المدرسة الثانوية شهادة على التزامنا بالتعليم وتمكين
+    "humanity.schoolText": "تأسست في عام 1996 في شيراز من قبل مجموعة بزرگی، وتعتبر هذه المدرسة الثانوية شهادة على التزامنا بالتعليم وتمكين",
+    "contact.title": "اتصل بنا",
+    "contact.subtitle": "هل أنت مستعد لتحسين سلسلة التوريد الخاصة بك؟ تواصل مع فريقنا العالمي اليوم.",
+    "footer.rights": "كل الحقوق محفوظة.",
+    "footer.locationTitle": "موقعنا",
+    "footer.followUs": "تابعنا",
+    "chatbox.title": "دردش معنا",
+    "chatbox.placeholder": "اكتب رسالة...",
+    "chatbox.initialMessage": "مرحبًا! كيف يمكنني مساعدتك اليوم فيما يتعلق بمجموعة بزرگی؟",
+    "chatbox.cannedResponse": "شكرا لرسالتك. سيكون الممثل معك قريبا.",
+    "chatbox.typing": "يكتب...",
+    "chatbox.send": "أرسل رسالة",
+    "chatbox.close": "إغلاق الدردشة",
+    "theme.title": "المظهر",
+    "theme.light": "فاتح",
+    "theme.dark": "داكن",
+    "theme.auto": "تلقائي",
+    "whyus.title": "لماذا تختار مجموعة بزرگی - خبراء استشارات الأخشاب",
+    "whyus.subtitle": "في عالم الأخشاب، الخبرة هي الأهم - وقد بنينا خبرتنا من خلال سنوات من العمل العملي الحقيقي في الأسواق العالمية.",
+    "whyus.desc1": "مجموعة بزرگی هي شركة متخصصة في استشارات وتوريد الأخشاب، وتقدم خبرة عميقة في الأخشاب والمواد القائمة على الخشب - من التوريد والاستيراد إلى اختيار المواد المناسبة للمشاريع الصناعية والمعمارية.",
+    "whyus.desc2": "تستند خدماتنا الاستشارية إلى واقع السوق والخبرة الميدانية المثبتة - وليس النظرية.",
+    "whyus.listTitle": "نحن نساعدك في:",
+    "whyus.list1": "اختر نوع الخشب المناسب بناءً على احتياجاتك وميزانيتك والغرض.",
+    "whyus.list2": "تجنب الأخطاء المكلفة في الشراء أو تنفيذ المشروع.",
+    "whyus.list3": "الحصول على حق الوصول إلى موردين عالميين موثوقين ومواد خام عالية الجودة.",
+    "whyus.list4": "اتخاذ قرارات فنية وتجارية واثقة بتوجيه مهني.",
+    "whyus.conclusion": "مع خبرة طويلة الأمد في جميع أنحاء إسبانيا والشرق الأوسط وأوروبا، نجلب رؤية واسعة وشبكة صلبة لكل مشروع. في مجموعة بزرگی، نحن لسنا مجرد موردين - نحن مستشارو الأخشاب الموثوق بهم وشركاؤك الاستراتيجيون في كل خطوة من عملية صنع القرار.",
+    "property.title": "الاستشارات العقارية",
+    "property.subtitle": "نحن نستشيرك لتعرف بالضبط متى وأين وكيف تستثمر في العقارات.",
+    "property.when.title": "متى",
+    "property.when.desc": "تحليل خبير لدورات السوق لتحديد وقت الشراء أو البيع أو الإيجار بشكل مثالي.",
+    "property.where.title": "أين",
+    "property.where.desc": "تحديد أفضل المواقع ذات الإمكانات الأعلى للنمو وعائد الاستثمار.",
+    "property.what.title": "شراء أو بيع أو إيجار",
+    "property.what.desc": "مشورة استراتيجية حول ما إذا كان يجب شراء أو بيع أو استئجار العقارات بناءً على أهدافك.",
+    "property.who.title": "من",
+    "property.who.desc": "ربطك بشركاء ووكلاء وأصحاب مصلحة موثوقين يمكنك الاعتماد عليهم.",
+    "property.strategy.title": "نهجنا الاستراتيجي",
+    "property.strategy.desc": "نحن لا نجد العقارات فقط؛ نقوم بتحليل الأسواق. يتيح لنا فهمنا العميق للوائح المحلية في الشرق الأوسط وأوروبا إرشادك خلال المعاملات المعقدة بسهولة، مما يضمن أن استثمارك آمن ومربح.",
+    "materials.consulting.title": "منهجية الاستشارات",
+    "materials.consulting.subtitle": "إطار شامل من أربع خطوات لضمان نجاح مشروعك.",
+    "materials.what.title": "ماذا تختار",
+    "materials.what.desc": "نحدد نوع الخشب الدقيق والدرجة والمواصفات التي تتوافق تمامًا مع المتطلبات الفنية والجمالية لمشروعك.",
+    "materials.when.title": "متى تشتري",
+    "materials.when.desc": "نتنقل في تقلبات السوق العالمية لمساعدتك على تحديد وقت مشترياتك للحصول على أفضل الأسعار والتسليم في الوقت المحدد.",
+    "materials.where.title": "من أين تحصل",
+    "materials.where.desc": "الاستفادة من شبكتنا في أوروبا وأمريكا وآسيا، نختار أفضل مصدر لموادك لتحقيق التوازن بين الجودة والخدمات اللوجستية.",
+    "materials.how.title": "كيف تستخدم",
+    "materials.how.desc": "توجيه فني حول التطبيق والمعالجة والصيانة لضمان أقصى قدر من المتانة والأداء.",
+    "testimonials.title": "قصص نجاح العملاء",
+    "testimonials.materials.subtitle": "موثوق به من قبل رواد البناء والمهندسين المعماريين في جميع أنحاء العالم.",
+    "testimonials.materials.quote1": "وفرت لنا خبرة مجموعة بزرگی في توريد الأخشاب وقتًا وميزانية كبيرة في أحدث مشروع فندقي لدينا. كانت الجودة لا تشوبها شائبة.",
+    "testimonials.materials.role1": "كبير المهندسين المعماريين، ستوديو فالنسيا للتصميم",
+    "testimonials.materials.quote2": "ساعدتنا استشاراتهم حول موعد شراء المواد السائبة على تجنب ارتفاع الأسعار في عام 2023. شركاء استراتيجيون حقيقيون.",
+    "testimonials.materials.role2": "مدير المشتريات، شركة بيلد تك للإنشاءات",
+    "testimonials.materials.quote3": "موثوق وشفاف ومطلع بشكل لا يصدق على أسواق الأخشاب العالمية.",
+    "testimonials.materials.role3": "مدير، شركة الواحة لتصنيع الأثاث",
+    "testimonials.property.subtitle": "توجيه المستثمرين إلى فرص عقارية مربحة.",
+    "testimonials.property.quote1": "كان تحليل السوق الخاص بهم لاستثمارنا في دبي دقيقًا. حققنا عائد استثمار بنسبة 12٪ في السنة الأولى وحدها.",
+    "testimonials.property.role1": "مستثمر خاص، إيطاليا",
+    "testimonials.property.quote2": "التنقل في المشهد القانوني في بلد جديد أمر صعب. جعلت مجموعة بزرگی الأمر سهلاً لانتقال عائلتنا.",
+    "testimonials.property.role2": "مقيم وافد، المملكة المتحدة",
+    "testimonials.property.quote3": "مشورة مهنية حول التأجير التجاري تتماشى تمامًا مع أهداف توسيع أعمالنا.",
+    "testimonials.property.role3": "الرئيس التنفيذي، مشاريع تك ستارت",
+    "testimonials.it.subtitle": "ما تقوله الشركات الناجحة عن الأتمتة لدينا.",
+    "testimonials.it.quote1": "باستخدام هذا النظام، تضاعفت مبيعاتنا ثلاث مرات وانخفض الوقت المستغرق لمتابعة العملاء إلى الربع. مذهل حقًا!",
+    "testimonials.it.role1": "رضا محمدي، الرئيس التنفيذي لمتجر إلكتروني",
+    "testimonials.it.quote2": "سمحت لنا أتمتة الإعلانات بإدارة ميزانيتنا الإعلانية بشكل أفضل وزاد معدل التحويل لدينا 10 أضعاف. موصى به للغاية!",
+    "testimonials.it.role2": "سارة أحمدي، مديرة التسويق",
+    "testimonials.it.quote3": "لديهم فريق دعم رائع. النظام سهل الاستخدام للغاية ولا يحتاج إلى معرفة متخصصة. ممتاز!",
+    "testimonials.it.role3": "مهدي كريمي، صاحب شركة ناشئة"
+}
