--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,12 @@
 {
+    "seo.home.title": "Home",
+    "seo.home.desc": "Bozorgi Group is a specialized conglomerate in Building Materials, Property Consulting, and IT Solutions. Global reach, local expertise.",
+    "seo.materials.title": "Building Materials",
+    "seo.materials.desc": "Expert sourcing of MDF, HDF, Plywood, and Hardwood. We consult on selection, timing, and logistics for global construction projects.",
+    "seo.property.title": "Property Consulting",
+    "seo.property.desc": "Strategic real estate advice for buying, selling, or renting in the Middle East and Europe. Maximize ROI with expert guidance.",
+    "seo.it.title": "IT & AI Solutions",
+    "seo.it.desc": "Automate your business with AI-driven marketing, sales funnels, and CRM systems. Increase efficiency and revenue by 10x.",
     "header.about": "About Us",
     "header.products": "Materials",
     "header.property": "Real Estate",
