feat: Add language switcher to mobile menu
Integrates a language switcher component into the mobile navigation menu, allowing users to change the application's display language. This enhances international accessibility and user experience.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -14,6 +14,7 @@
     "header.history": "التاريخ",
     "header.humanity": "الإنسانية",
     "header.contact": "اتصل بنا",
+    "header.language": "لغة",
     "hero.subtitle": "خبراء عالميون في توريد الأخشاب، والاستشارات العقارية، وحلول تكنولوجيا المعلومات",
     "hero.materials.subtitle": "توريد أجود أنواع الأخشاب ومواد البناء من جميع أنحاء العالم لاحتياجاتك المعمارية.",
     "hero.property.subtitle": "اتخاذ قرارات عقارية ذكية مع تحليل السوق القائم على البيانات والاستشارات المتخصصة.",
