--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,6 +14,7 @@
     "header.history": "History",
     "header.humanity": "Humanity",
     "header.contact": "Contact",
+    "header.language": "Language",
     "hero.subtitle": "Global Experts in Wood Sourcing, Property Consulting & IT Solutions",
     "hero.materials.subtitle": "Sourcing the finest wood and building materials from around the globe for your architectural needs.",
     "hero.property.subtitle": "Making intelligent real estate decisions with data-driven market analysis and expert consulting.",
