--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -14,6 +14,7 @@
     "header.history": "Historia",
     "header.humanity": "Humanidad",
     "header.contact": "Contacto",
+    "header.language": "Idioma",
     "hero.subtitle": "Expertos Globales en Abastecimiento de Madera, Consultoría Inmobiliaria y Soluciones IT",
     "hero.materials.subtitle": "Abastecimiento de la mejor madera y materiales de construcción de todo el mundo para sus necesidades arquitectónicas.",
     "hero.property.subtitle": "Tomando decisiones inmobiliarias inteligentes con análisis de mercado basado en datos y consultoría experta.",
